# powerlifting_dashboard

./: .gitignore  README.md  pyproject.toml
src/powerlifting_dashboard/data/: prepare_improvement_dataset.py
